--- a/package.json
+++ b/package.json
@@ -1,3 +1,18 @@
 {
-  "name": "hardhat-project"
+  "name": "hardhat-project",
+  "scripts": {
+    "clean": "npx hardhat clean",
+    "chain": "npx hardhat node",
+    "compile": "npx hardhat compile",
+    "deploy": "npx hardhat run --network localhost scripts/deploy.ts",
+    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy.ts",
+    "deploy:fuji": "npx hardhat run --network fuji scripts/deploy.ts",
+    "deploy:ropsten": "npx hardhat run --network ropsten scripts/deploy.ts",
+    "deploy:goerli": "npx hardhat run --network goerli scripts/deploy.ts",
+    "deploy:kovan": "npx hardhat run --network kovan scripts/deploy.ts",
+    "deploy:mainnet": "npx hardhat run --network mainnet scripts/deploy.ts",
+    "deploy:bsctest": "npx hardhat run --network kovan scripts/deploy.ts",
+    "deploy:bscmain": "npx hardhat run --network bscmain scripts/deploy.ts",
+    "test": "npx hardhat test"
+},
 }
