--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "hardhat": "^2.11.2"
   },
   "dependencies": {
-    "@ethersproject/providers": "^5.7.1",
     "@openzeppelin/contracts": "^4.7.3",
-    "ethers": "^5.7.1",
-    "i": "^0.3.7",
-    "npm": "^8.19.2"
+    "ethers": "5.6.1"
   }
 }
