--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "hardhat": "^2.11.2"
   },
   "dependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.7.3",
+    "eth-permit": "^0.2.3",
     "ethers": "5.6.1"
   }
 }
